# VoxelCraft

./: Application.cpp  CMakeLists.txt  Camera.cpp  Chunk.cpp  README.md  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp  glad.c  main.cpp
.cache/clangd/index/: Application.cpp.D4ECB1340CE24760.idx  Application.hpp.6872466D9EDEFE18.idx  Application.hpp.6D71909146865AA0.idx  Render.hpp.ABF5791EBB66B611.idx  Renderer.cpp.DDC0DBB37F42EE25.idx  Renderer.hpp.25B1F8F0A796C9D7.idx  Renderer.hpp.C6C8A204F7377433.idx  Shader.cpp.80E788B698068047.idx  Shader.hpp.E3FB93556D267832.idx  Shader.hpp.FC3E0F2F86F0C695.idx  Texture.cpp.70A0105C2690C409.idx  Texture.hpp.452F8171EE99AA44.idx  Window.cpp.26DE29E468989A26.idx  Window.hpp.009686E07D8DB02C.idx  Window.hpp.6AD717947E375022.idx  camera.cpp.AF315750AE7FA853.idx  camera.hpp.F0C15CCB43645B8D.idx  glad.c.30AED522F7E255B3.idx  glad.c.F0E4143CC137A09C.idx  glad.h.3D50DD2A6859E0CE.idx  khrplatform.h.B6A00008B47E6F1D.idx  main.cpp.0C953B39CEA84755.idx  main.cpp.2BB668CBEFC9D6F5.idx  stb_image.h.F5516362E51C3551.idx
include/: Application.hpp  Chunk.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Window.hpp  camera.hpp
include/glad/: glad.h
shaders/: Flightshader.txt  Fshader.txt  Vlightshader.txt  Vshader.txt
